--- a/style.css
+++ b/style.css
@@ -177,11 +177,12 @@ body {
   grid-area: info;
   -ms-grid-row-align: end;
       align-self: end;
+  margin-top: -20%;
   display: -ms-grid;
   display: grid;
       grid-template-areas: "amount" "kind";
-  -ms-grid-rows: 1fr 0.5fr;
-      grid-template-rows: 1fr 0.5fr;
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
   row-gap: 0;
@@ -192,6 +193,8 @@ body {
 }
 
 .test-container .info .test-kind {
+  position: absolute;
+  bottom: 0;
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: kind;
@@ -225,7 +228,7 @@ body {
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  padding: 0.5em;
+  padding: 1em;
   width: 100%;
 }
 
@@ -256,11 +259,12 @@ body {
   display: grid;
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
-  -ms-grid-rows: 1fr 0.5fr;
-      grid-template-rows: 1fr 0.5fr;
+  -ms-grid-rows: 1fr 0.1fr;
+      grid-template-rows: 1fr 0.1fr;
       grid-template-areas: "amount" "unit";
   -webkit-column-gap: 0;
           column-gap: 0;
+  row-gap: 0;
   position: relative;
   padding: 0;
   margin: 0 auto;
@@ -277,6 +281,7 @@ body {
 }
 
 .unit-container .unit {
+  margin-top: calc(-1 * var(--font-size-sm));
   font-size: var(--font-size-sm);
   -ms-grid-row: 2;
   -ms-grid-column: 1;
@@ -357,6 +362,7 @@ body {
     row-gap: 2em;
     width: 100%;
     max-width: 100%;
+    max-height: 100%;
   }
   .main-content .start-btn-container {
     -ms-flex-item-align: start;
@@ -367,6 +373,25 @@ body {
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
+  }
+  .main-content .test-container .info {
+    width: 100%;
+        grid-template-areas: "amount kind";
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 1fr;
+        grid-template-rows: 1fr;
+  }
+  .main-content .test-container .info .test-kind {
+    position: relative;
+    -ms-grid-row: 1;
+    -ms-grid-column: 2;
+    grid-area: kind;
+  }
+  .main-content .test-container .info .amount-container {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    grid-area: amount;
   }
   .main-content .test-info-container {
     -ms-flex-item-align: end;
@@ -382,7 +407,7 @@ body {
   }
   html,
   body {
-    font-size: 0.9em;
+    font-size: 0.8em;
   }
 }
 /*# sourceMappingURL=style.css.map */
